--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -2,7 +2,9 @@ name: Flutter CI
 
 on:
   push:
+    branches: [ "main", "dev" ]
   pull_request:
+    branches: [ "main", "dev" ]
 
 jobs:
   build-and-test:
